@@ -4,6 +4,8 @@ The "#99999" numbers are Subversion revision numbers.
 Current subversion
 ==================
 
+ o #14081 Changed default communication protocol from IOR (Corba) to SOCKET
+
  o #14058 Functional email protocol driver with or without ZLIB compression 
 
  o #14050 http/j2me: Fixed possible IndexOutOfBound and NegativeArray exceptions in http servlet
